@@ -5,6 +5,7 @@
 	(CygbuildCmdInstallMain): Create .inst directory.
 	(CygbuildBootVariablesGlobalMain): Move .pc directory to
 	cygbuild_opt_exclude_version_control.
+	(CygbuildPatchApplyQuiltMaybe): pop does not support color option.
 
 2013-02-01 Fri  Jari Aalto  <jari.aalto@cante.net>
 
